<resources>
    <string name="amity_chat">Chat</string>
    <string name="amity_title_recent_chat">Recent</string>
    <string name="amity_title_directory">Directory</string>
    <string name="amity_billie_elli">Billie Ellish \u00F4\u0080\u0087\u00BB</string>
    <string name="amity_member_count">(%d)</string>
    <string name="amity_no_conversations">No conversations</string>
    <string name="amity_type_message">Type message</string>
    <string name="amity_settings">Settings</string>
    <string name="amity_edit">Edit</string>
    <string name="amity_delete">Delete</string>
    <string name="amity_report">Report</string>
    <string name="amity_unreport">Unreport</string>
    <string name="amity_edit_msg">Edit Message</string>
    <string name="amity_save">SAVE</string>
    <string name="amity_msg_dltd">Message deleted \u2022</string>
    <string name="amity_unknown_msg">Unknown message type</string>
    <string name="amity_msg_edited">Edited \u2022</string>
    <string name="amity_failed_msg">Can\'t send the message</string>
    <string name="amity_camera">Camera</string>
    <string name="amity_album">Album</string>
    <string name="amity_file">File</string>
    <string name="amity_location">Location</string>
    <string name="amity_hold_to_record">Hold to record</string>
    <string name="amity_message_is_too_short">Message is too short.</string>
    <string name="amity_playback_error">Unable to play message.</string>
    <string name="amity_connected">Connected</string>
    <string name="amity_no_internet">No internet connection</string>
    <string name="amity_channel_creation_error">Failed to create a channel</string>
    <string name="amity_channel_creation_loading">Creating channel, please wait…</string>


</resources>
