<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.amity.socialcloud.uikit.common.common.views.AmityColorShade" />

        <variable
            name="clickListener"
            type="com.amity.socialcloud.uikit.common.components.AmityChatComposeBarClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            backgroundColorShade="@{AmityColorShade.SHADE4}"
            amityBackgroundColor="@{@color/amityColorBase}"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivCamera"
            style="@style/AmityCircularAvatarStyle"
            backgroundColorShade="@{AmityColorShade.SHADE4}"
            amityBackgroundColor="@{@color/amityColorBase}"
            android:layout_width="@dimen/amity_fifty"
            android:layout_height="@dimen/amity_fifty"
            android:onClick="@{() -> clickListener.onCameraClicked()}"
            android:src="@drawable/ic_photo_camera_white_24dp"
            android:tint="@color/amityColorBase"
            app:layout_constraintBottom_toTopOf="@id/ivLocation"
            app:layout_constraintEnd_toStartOf="@id/ivAlbum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCamera"
            style="@style/AmityTextStyleCaption"
            textColorShade="@{AmityColorShade.SHADE1}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/amity_padding_xxs"
            android:gravity="center"
            android:text="@string/amity_camera"
            android:textColor="@color/amityColorBase"
            app:layout_constraintEnd_toEndOf="@id/ivCamera"
            app:layout_constraintStart_toStartOf="@id/ivCamera"
            app:layout_constraintTop_toBottomOf="@id/ivCamera" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAlbum"
            style="@style/AmityCircularAvatarStyle"
            backgroundColorShade="@{AmityColorShade.SHADE4}"
            amityBackgroundColor="@{@color/amityColorBase}"
            android:layout_width="@dimen/amity_fifty"
            android:layout_height="@dimen/amity_fifty"
            android:onClick="@{() -> clickListener.onAlbumClicked()}"
            android:src="@drawable/amity_ic_album"
            app:layout_constraintEnd_toStartOf="@id/ivFile"
            app:layout_constraintStart_toEndOf="@id/ivCamera"
            app:layout_constraintTop_toTopOf="@id/ivCamera" />

        <TextView
            android:id="@+id/tvAlbum"
            style="@style/AmityTextStyleCaption"
            textColorShade="@{AmityColorShade.SHADE1}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/amity_padding_xxs"
            android:gravity="center"
            android:text="@string/amity_album"
            android:textColor="@color/amityColorBase"
            app:layout_constraintEnd_toEndOf="@id/ivAlbum"
            app:layout_constraintStart_toStartOf="@id/ivAlbum"
            app:layout_constraintTop_toBottomOf="@id/ivAlbum" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivFile"
            style="@style/AmityCircularAvatarStyle"
            backgroundColorShade="@{AmityColorShade.SHADE4}"
            amityBackgroundColor="@{@color/amityColorBase}"
            android:layout_width="@dimen/amity_fifty"
            android:layout_height="@dimen/amity_fifty"
            android:onClick="@{() -> clickListener.onFileClicked()}"
            android:rotation="-45"
            android:src="@drawable/amity_ic_attachment"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivAlbum"
            app:layout_constraintTop_toTopOf="@id/ivCamera" />

        <TextView
            android:id="@+id/tvFile"
            style="@style/AmityTextStyleCaption"
            textColorShade="@{AmityColorShade.SHADE1}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/amity_padding_xxs"
            android:gravity="center"
            android:text="@string/amity_file"
            android:textColor="@color/amityColorBase"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/ivFile"
            app:layout_constraintStart_toStartOf="@id/ivFile"
            app:layout_constraintTop_toBottomOf="@id/ivFile" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivLocation"
            style="@style/AmityCircularAvatarStyle"
            backgroundColorShade="@{AmityColorShade.SHADE4}"
            amityBackgroundColor="@{@color/amityColorBase}"
            android:layout_width="@dimen/amity_fifty"
            android:layout_height="@dimen/amity_fifty"
            android:onClick="@{() -> clickListener.onLocationCLicked()}"
            android:src="@drawable/amity_ic_location"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/ivCamera"
            app:layout_constraintTop_toBottomOf="@id/ivCamera" />

        <TextView
            android:id="@+id/tvLocation"
            style="@style/AmityTextStyleCaption"
            textColorShade="@{AmityColorShade.SHADE1}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/amity_padding_xxs"
            android:gravity="center"
            android:text="@string/amity_location"
            android:textColor="@color/amityColorBase"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/ivLocation"
            app:layout_constraintStart_toStartOf="@id/ivLocation"
            app:layout_constraintTop_toBottomOf="@id/ivLocation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>