<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <import type="com.amity.socialcloud.uikit.common.common.views.AmityColorShade" />

        <variable
            name="viewModel"
            type="com.amity.socialcloud.uikit.chat.messages.viewModel.AmityMessageListViewModel" />
    </data>

    <FrameLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.amity.socialcloud.uikit.chat.messages.fragment.AmityChatRoomWithDefaultComposeBarFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:animateLayoutChanges="true"
            android:id="@+id/layoutParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/chatToolBar"
                layout="@layout/amity_chat_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@{viewModel.title}"
                app:avatar="@{viewModel.avatarUrl}"/>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvChatList"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/etMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chatToolBar"
                app:onScrollStateChanged="@{(view, newState) -> viewModel.onRVScrollStateChanged(view, newState)}" />

            <include
                layout="@layout/amity_view_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isScrollable() ? View.VISIBLE : View.GONE}"
                app:date="@{viewModel.stickyDate}"
                app:dateFillColor="@{viewModel.dateFillColor}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/rvChatList" />

            <ImageView
                android:id="@+id/ivVoiceMsg"
                android:layout_width="@dimen/amity_twenty_four"
                android:layout_height="@dimen/amity_twenty_four"
                android:layout_marginHorizontal="@dimen/amity_padding_s"
                android:onClick="@{() -> viewModel.toggleRecordingView()}"
                android:src="@{viewModel.isVoiceMsgUi() ? @drawable/amity_ic_keyboard : @drawable/amity_ic_voice_message}"
                app:layout_constraintBottom_toBottomOf="@id/etMessage"
                app:layout_constraintEnd_toStartOf="@id/etMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etMessage" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/amity_ten"
                android:layout_marginBottom="@dimen/amity_ten"
                android:enabled="@{!viewModel.isVoiceMsgUi()}"
                android:hint="@string/amity_type_message"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:paddingHorizontal="@dimen/amity_padding_s"
                android:text="@={viewModel.text}"
                android:textColorHint="@{@color/amityColorBase}"
                app:layout_constraintBottom_toTopOf="@id/composeBar"
                app:layout_constraintEnd_toStartOf="@id/rightBarrier"
                app:layout_constraintStart_toEndOf="@id/ivVoiceMsg"
                app:layout_constraintTop_toBottomOf="@id/rvChatList"
                app:textColorHintShade="@{AmityColorShade.SHADE3}" />

            <View
                android:id="@+id/recordBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/amity_padding_m1"
                android:visibility="@{viewModel.isVoiceMsgUi() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/etMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/etMessage"
                app:layout_constraintTop_toTopOf="@id/etMessage" />

            <TextView
                android:id="@+id/tvRecord"
                style="@style/AmityTextStyleBodyBold"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:text="@string/amity_hold_to_record"
                android:textColor="@color/amityColorBase"
                android:visibility="@{viewModel.isVoiceMsgUi() ? View.VISIBLE : View.GONE}"
                app:drawableStartCompat="@drawable/amity_ic_mic"
                app:layout_constraintBottom_toBottomOf="@id/etMessage"
                app:layout_constraintEnd_toEndOf="@id/etMessage"
                app:layout_constraintStart_toStartOf="@id/etMessage"
                app:layout_constraintTop_toTopOf="@id/etMessage" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/rightBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="start"
                app:constraint_referenced_ids="btnAdd,ivSend" />

            <ImageView
                android:id="@+id/btnAdd"
                amityTintColor="@{@color/amityColorBase}"
                amityTintShade="@{AmityColorShade.SHADE1}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/amity_padding_xs"
                android:layout_marginEnd="@dimen/amity_padding_m1"
                android:onClick="@{() -> viewModel.toggleComposeBar()}"
                android:src="@{viewModel.showComposeBar ? @drawable/amity_ic_cross : @drawable/amity_ic_chat_add}"
                android:visibility="@{TextUtils.isEmpty(viewModel.text.trim()) &amp; !viewModel.isVoiceMsgUi() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/etMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rightBarrier"
                app:layout_constraintTop_toTopOf="@id/etMessage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivSend"
                style="@style/AmityIconButtonStyle"
                android:layout_width="@dimen/amity_twenty_four"
                android:layout_height="@dimen/amity_twenty_four"
                android:layout_marginStart="@dimen/amity_padding_xs"
                android:layout_marginEnd="@dimen/amity_padding_m1"
                android:layout_marginBottom="@dimen/amity_padding_xs"
                android:onClick="@{() -> viewModel.sendMessage()}"
                android:visibility="@{TextUtils.isEmpty(viewModel.text.trim()) || viewModel.isVoiceMsgUi() ? View.GONE : View.VISIBLE}"
                app:icon="@drawable/amity_compose_bar_send_icon"
                app:layout_constraintBottom_toBottomOf="@id/etMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rightBarrier"
                app:shapeAppearanceOverlay="@style/AmityCircleImage" />

            <include
                android:id="@+id/composeBar"
                layout="@layout/amity_chat_compose_bar"
                android:layout_width="0dp"
                android:layout_height="280dp"
                android:visibility="@{viewModel.showComposeBar ? View.VISIBLE : View.GONE}"
                app:clickListener="@{viewModel.composeBarClickListener}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etMessage" />

            <com.amity.socialcloud.uikit.common.components.AmityAudioRecorderView
                android:id="@+id/recorderView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewModel.isRecording() ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/loading_view"
                android:visibility="gone"
                android:background="@color/amityColorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.core.widget.ContentLoadingProgressBar
                    android:layout_marginTop="@dimen/amity_padding_xl"
                    android:indeterminateTint="@color/amityColorPrimary"
                    android:layout_centerInParent="true"
                    android:id="@+id/base_feed_progress_bar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/connection_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/chatToolBar"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:background="@color/amityColorGrey"
                    android:gravity="center_horizontal"
                    android:text="@string/amity_no_internet"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:id="@+id/connection_texview"
                    android:textSize="@dimen/amity_text_size_body"
                    android:textColor="@color/amityColorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>